tests/paczka1/fuzzy1/67686669.err
Error in line 14: kyzmD9Z8GR S297 86,4
Error in line 16: fWJ09 A238 83,1
Error in line 28: IQ3vwy6L S864 90,1
Error in line 34: IQ3vwy6L S297 5,01
Error in line 37: Bzd08 S27 87,8
Error in line 32: kyzmD9Z8GR S864 93,6
Error in line 29: fWJ09 S292 9,9
Error in line 36: nuo4kWOJ0Au S297 20,0
